Fix alignment of upload icon

--- a/hypha/static_src/src/sass/apply/components/_form.scss
+++ b/hypha/static_src/src/sass/apply/components/_form.scss
@@ -101,7 +101,7 @@
             @include button($color--light-blue, $color--darkest-blue);
             max-width: 290px;
             text-align: center;
-            background: url('./../../images/upload.svg') $color--light-blue no-repeat 40px center;
+            background: url('./../../images/upload.svg') $color--light-blue no-repeat 20px center;
             border: 0;
 
             .no-js & {
